--- a/ViperModuleGenerator/Base.lproj/Main.storyboard
+++ b/ViperModuleGenerator/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
             </objects>
             <point key="canvasLocation" x="1076" y="137.18140929535232"/>
         </scene>
-        <!--Example-->
+        <!--Example View Controller-->
         <scene sceneID="Oz2-vV-KOL">
             <objects>
                 <viewController storyboardIdentifier="ExampleViewController" id="udc-T5-lqO" customClass="ExampleViewController" customModule="ViperModuleGenerator" customModuleProvider="target" sceneMemberID="viewController">
@@ -42,14 +42,50 @@
                     <view key="view" contentMode="scaleToFill" id="GfO-oD-Uf3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ed9-eO-GgZ">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellID" textLabel="lUd-XT-QGg" style="IBUITableViewCellStyleDefault" id="MHN-Mm-3UT">
+                                        <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MHN-Mm-3UT" id="XBp-ug-iSC">
+                                            <frame key="frameInset" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lUd-XT-QGg">
+                                                    <frame key="frameInset" minX="15" width="345" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="udc-T5-lqO" id="DGh-3S-uuH"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CpB-Kn-NTZ" firstAttribute="top" secondItem="ed9-eO-GgZ" secondAttribute="bottom" id="BfO-1R-yFi"/>
+                            <constraint firstItem="ed9-eO-GgZ" firstAttribute="leading" secondItem="GfO-oD-Uf3" secondAttribute="leading" id="Dgr-vn-F4b"/>
+                            <constraint firstAttribute="trailing" secondItem="ed9-eO-GgZ" secondAttribute="trailing" id="R9x-Ih-Gcq"/>
+                            <constraint firstItem="ed9-eO-GgZ" firstAttribute="top" secondItem="GfO-oD-Uf3" secondAttribute="top" id="gpw-DC-AZw"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Example" id="pUT-CA-uHx"/>
+                    <navigationItem key="navigationItem" id="pUT-CA-uHx"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="ed9-eO-GgZ" id="JlG-hX-9Dx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6tm-fG-dJs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1874" y="137"/>
+            <point key="canvasLocation" x="1872.8" y="136.28185907046478"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OcF-ej-Hfd">
